--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
-body{
-    background-color: #1e293b;
-    color:#e2e8f0;
+body {
+  background-color: #1e293b;
+  color: #e2e8f0;
 }
